kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress


metadata:

  name: three-tier-ingress

  namespace: three-tier-app


  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/healthcheck-path: /



spec:

  ingressClassName: alb


  rules:

  - http:

      paths:


      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend-service

            port:

              number: 80



      - path: /api

        pathType: Prefix

        backend:

          service:

            name: backend-service

            port:

              number: 5000
